# feldspar

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  example_config.ron
.github/workflows/: ci.yml
archived/: Cargo.toml
archived/src/: bvt.rs  lib.rs  renderer.rs  world.rs
archived/src/renderer/: debug_lines.rs  entity.rs  render_graph.rs
archived/src/renderer/render_graph/voxel_pipeline/: pbr.frag
archived/src/voxel_data/: database.rs  editor.rs  empty_chunk_remover.rs  map.rs  map_changes.rs  voxel.rs
archived/src/world/: witness.rs
assets/: chunk_fsm.dot  crates.dot
crates/feldspar-core/: Cargo.toml
crates/feldspar-core/src/: archived_buf.rs  bitset.rs  frame_budget.rs  geometry.rs  lib.rs  work_timer.rs
crates/feldspar-map/: Cargo.toml  README.md
crates/feldspar-map/src/: allocator.rs  archived_buf.rs  bitset.rs  chunk.rs  clipmap.rs  config.rs  coordinates.rs  database.rs  geometry.rs  lib.rs  ndview.rs  node.rs  palette.rs  plugin.rs  sampling.rs  sdf.rs  units.rs  vox.rs  voxel_attributes.rs
crates/feldspar-map/src/clipmap/: neighborhood_subdiv.rs  node.rs  raycast.rs  streaming.rs
crates/feldspar-map/src/clipmap/streaming/: load_search.rs  render_search.rs
crates/feldspar-map/src/database/: backup_tree.rs  bulk_tree.rs  change_encoder.rs  change_tree.rs  chunk_key.rs  meta_tree.rs  version_change_tree.rs  version_graph_tree.rs  version_tree.rs  working_tree.rs
crates/feldspar-map/src/plugin/: config.rs  loader.rs  witness.rs
crates/feldspar-renderer/: Cargo.toml  README.md
crates/feldspar-renderer/src/: config.rs  lib.rs  mesher.rs  plugin.rs
src/: assets.rs  bvt.rs  config.rs  database.rs  lib.rs  renderer.rs  voxel_data.rs  world.rs
src/renderer/: assets.rs  debug_lines.rs  entity.rs  material.rs  mesh_generator.rs  render_graph.rs
src/renderer/render_graph/: voxel_pipeline.rs
src/renderer/render_graph/voxel_pipeline/: pbr.frag  pbr.vert
src/voxel_data/: change_buffer.rs  chunk_cache_flusher.rs  chunk_compressor.rs  database.rs  edit_buffer.rs  editor.rs  empty_chunk_remover.rs  map.rs  map_changes.rs  plugin.rs  voxel.rs
src/world/: chunk_loader.rs  plugin.rs
