[package]
name = "feldspar"
version = "0.1.0"
authors = ["Duncan <bonsairobo@gmail.com>"]
edition = "2021"

[workspace]
members = ["crates/*"]
exclude = ["archived", "benches"]

[profile]
dev = { opt-level = 2 }
release = { lto = "thin" }
bench = { lto = "thin" }

[[bin]]
name = "editor"
path = "src/editor/main.rs"
test = false
bench = false

[dependencies]
feldspar-map = { path = "crates/feldspar-map", version = "0.1" }
