[package]
name = "feldspar"
version = "0.1.0"
authors = ["Duncan <bonsairobo@gmail.com>"]
edition = "2021"

[workspace]
members = ["crates/*"]
exclude = ["archived", "benches"]

[profile]
dev = { opt-level = 2 }
release = { lto = "thin" }
bench = { lto = "thin" }

[[bin]]
name = "viewer"
path = "bin/viewer/main.rs"
bench = false

[[bin]]
name = "editor"
path = "bin/editor/main.rs"
bench = false

[dependencies]
feldspar-core = { path = "crates/feldspar-core", version = "0.1" }
feldspar-map = { path = "crates/feldspar-map", version = "0.1", features = ["bevy_plugin"] }
feldspar-renderer = { path = "crates/feldspar-renderer", version = "0.1" }

smooth-bevy-cameras = { git = "https://github.com/bonsairobo/smooth-bevy-cameras", rev = "383de21c" }

[dependencies.bevy]
git = "https://github.com/bevyengine/bevy"
rev = "fc0f15f1"
default-features = false
features = ["render", "png", "x11"]
