[package]
name = "feldspar"
version = "0.1.0"
authors = ["Duncan <bonsairobo@gmail.com>"]
edition = "2021"

[workspace]
resolver = "2"
members = ["crates/*"]
exclude = ["archived", "benches"]

[profile]
release = { lto = "thin" }
bench = { lto = "thin" }

[profile.dev]
opt-level = 2

[profile.dev.package."*"]
opt-level = 3

[[bin]]
name = "viewer"
path = "bin/viewer/main.rs"
bench = false

[[bin]]
name = "editor"
path = "bin/editor/main.rs"
bench = false

[dependencies]
feldspar-core = { path = "crates/feldspar-core", version = "0.1" }
feldspar-map = { path = "crates/feldspar-map", version = "0.1", features = ["bevy_plugin"] }
feldspar-renderer = { path = "crates/feldspar-renderer", version = "0.1" }

[dependencies.smooth-bevy-cameras]
git = "https://github.com/bonsairobo/smooth-bevy-cameras"
rev = "a1095b9bc563d459c79b59e12ef620fa4567e04e"

[dependencies.bevy]
version = "0.8.0"
default-features = false
features = ["render", "png", "x11", "dynamic", "bevy_asset"]
