[package]
name = "feldspar-core"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.7"
approx = "0.5"
rkyv = { version = "0.7", features = ["validation"] }
slab = "0.4"
static_assertions = "1.1"

[dependencies.ilattice]
git = "https://github.com/bonsairobo/ilattice-rs"
rev = "30b6b463"
features = ["morton-encoding", "rkyv"]
