[package]
name = "feldspar-map"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.7"
approx = "0.5"
bytemuck = "1.7"
either = "1.6"
float-ord = "0.3"
futures = "0.3"
grid-ray = { git = "https://github.com/bonsairobo/grid-ray-rs", branch = "main" }
grid-tree = { git = "https://github.com/bonsairobo/grid-tree-rs", branch = "main" }
ilattice = { git = "https://github.com/bonsairobo/ilattice-rs", branch = "main", features = ["morton-encoding", "rkyv"] }
itertools = "0.10"
lz4_flex = "0.9"
ndshape = "0.2"
parking_lot = "0.11"
rkyv = { version = "0.7", features = ["validation"] }
slab = "0.4"
# NB: need 8-byte alignment guarantee from sled on main branch; not in stable release yet
sled = { git = "https://github.com/spacejam/sled", rev = "c840fe7e" }
smallvec = "1.7"
static_assertions = "1.1"

bevy = { version = "0.5", optional = true, default-features = false }

[dev-dependencies]
crossbeam = "0.8"
