[package]
name = "feldspar-renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0" # Can't go in core because re-exporting it breaks macros.

feldspar-map = { path = "../feldspar-map/", version = "0.1", features = ["bevy"] }

fast-surface-nets = "0.1"

[dependencies.bevy]
version = "0.8.0"
default-features = false
features = ["render", "png", "x11", "dynamic"]
